turtleart.lessons.turtleart.Main.TriangleFlat.scala.error
Source:4: error: '<-' expected but '=' found.
for(i = 0 to 2){
      ^Source:9: error: illegal start of simple expression
}
^